# MobileClient/MobileClient/Views/MySurveys/MySurveysList.xaml.cs
@@ -11,12 +11,12 @@ namespace MobileClient.Views.MySurveys
     [XamlCompilation(XamlCompilationOptions.Compile)]
     public partial class MySurveysList : ContentPage
     {
-        public ListViewController<SurveyDto> ListViewController;
+        public ListViewController<SurveyListItemDto> ListViewController;
 
         public MySurveysList()
         {
             InitializeComponent();
-            ListViewController = new ListViewController<SurveyDto>(SystemApi.SurveysClient.SurveysMySurveysGetAsync, ListView, SearchBar);
+            ListViewController = new ListViewController<SurveyListItemDto>(SystemApi.SurveysClient.SurveysMySurveysGetAsync, ListView, SearchBar);
             BindingContext = this;
         }
 
@@ -33,12 +33,7 @@ namespace MobileClient.Views.MySurveys
 
         private void ListView_OnItemTapped(object sender, ItemTappedEventArgs e)
         {
-            Navigation.PushAsync(new CreateSurvey((SurveyDto)e.Item));
-        }
-
-        private void SwipeItem_OnInvoked(object sender, EventArgs e)
-        {
-            Console.WriteLine("lol");
+            Navigation.PushAsync(new CreateSurvey(((SurveyListItemDto)e.Item).Id.Value));
         }
     }
 }
